# app

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  package.json
app/: Cargo.toml  index.html  package.json
app/src/: app.html  app.rs  bootstrap.rs  config.rs  health.rs  init.rs  keystore.rs  logging.rs  logs.rs  notifications.rs  settings.rs  setup.rs  ui_demo.rs
app/src/lib/utils/backup/: export.ts
crates/app-lib/: Cargo.toml
crates/app-lib/src/: file.rs
crates/core/: Cargo.toml
crates/model/: Cargo.toml
crates/tangle/: Cargo.toml
crates/tauri/: Cargo.toml
crates/ui-components/: Cargo.toml
crates/ui-components/src/: button_layout.rs  dialog.rs  icon.rs  lib.rs  list.rs  list_types.rs  separator.rs  sheet.rs  spinner.rs
crates/ui-core/: Cargo.toml
crates/ui-core/src/: event.rs  input.rs  lib.rs  preference.rs
crates/ui-primitives/: Cargo.toml
crates/ui-primitives/src/: aria_hidden.rs  dismissable.rs  focus.rs  lib.rs  presence.rs  roving_focus.rs  scroll_lock.rs
crates/ui-tokens/: Cargo.toml
crates/utils/: Cargo.toml
crates/wasm/: Cargo.toml
docs/: styles-parity-checklist.md
src/routes/(app)/settings/nostr/: +page.svelte
