[package]
name = "radroots-app"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen.workspace = true
radroots-app-core = { path = "../crates/core" }

[dev-dependencies]
futures.workspace = true
