[package]
name = "radroots-app-ui-core"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement",
  "KeyboardEvent",
  "PointerEvent",
  "Window"
] }
