[package]
name = "radroots-app-utils"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
radroots-types = { workspace = true }
getrandom = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
